# Problem-Solving

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C++/AtCoder/: abc186_a.cpp
C++/Codeforces/: 50A.cpp
Python/Codeforces/: 104A.py  110A.py  112A.py  116A.py  119A.py  12A.py  136A.py  144A.py  146A.py  148A.py  14A.py  151A.py  155A.py  157A.py  158A.py  16A.py  22A.py  32A.py  32B.py  34A.py  38A.py  41A.py  46A.py  47A.py  49A.py  4A.py  50A.py  59A.py  61A.py  71A.py  78A.py  92A.py  99A.py  9A.py
